# streamlit-julia-call-demo

./: README.md  main.py  pyproject.toml
pages/: mandel.py
